Update PC_USER_INTERFACE_README.md